# bar-assistant-mcp

./: .dockerignore  .gitignore  .mcp.json  .mcp.json.example  CLAUDE.md  Dockerfile  README.md  docker-compose.prod.yml  nginx-config  pyproject.toml
backups/: prod-backup.sqlite  prod-db-backup-20260528.tar
mcpb/: .gitignore  build_mcpb.py  manifest.json  secrets.json.example  test_mcp.py
scripts/: export_flavor_encoding.py  flavor_encoding.json  import_flavor_encoding.py  port_phase_a_to_ba.py  seed_flavor_db.py  tgii_amaro_overrides.json  tgii_amaro_results.json  tgii_amaro_unofficial_scores.json  tgii_american_single_malt_overrides.json  tgii_american_single_malt_results.json  tgii_american_single_malt_unofficial_scores.json  tgii_aquavit_overrides.json  tgii_aquavit_results.json  tgii_aquavit_unofficial_scores.json  tgii_bootstrap.py  tgii_bourbon_overrides.json  tgii_bourbon_results.json  tgii_bourbon_unofficial_scores.json  tgii_fruit_liqueur_overrides.json  tgii_fruit_liqueur_results.json  tgii_fruit_liqueur_unofficial_scores.json  tgii_gin_results.json  tgii_gin_unofficial_descriptions.json  tgii_gin_unofficial_scores.json  tgii_herbal_liqueur_overrides.json  tgii_herbal_liqueur_results.json  tgii_herbal_liqueur_unofficial_scores.json  tgii_overrides.json  tgii_rum_overrides.json  tgii_rum_results.json  tgii_rum_unofficial_scores.json  tgii_rye_overrides.json  tgii_rye_results.json  tgii_rye_unofficial_scores.json  tgii_scotch_overrides.json  tgii_scotch_results.json  tgii_scotch_unofficial_scores.json  tgii_vermouth_overrides.json  tgii_vermouth_results.json  (+1 more)
(+7 files in other folders)
