[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bar-assistant-mcp"
version = "1.0.0"
description = "MCP server for Bar Assistant cocktail management"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Erik Talvola" }
]
keywords = ["mcp", "cocktails", "bar-assistant", "bartending"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
]

[project.scripts]
bar-assistant-mcp = "bar_assistant_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bar_assistant_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
